# sam-plugins

./: .gitignore  README.md
artifact-host-agent/: config.yaml
artifact-host-agent/src/artifact_host_agent/: lifecycle.py  tools.py
local-mlx-vision/: README.md
local-tts/: README.md
object-detection/: config.yaml
tts-agent/: README.md  config.yaml  pyproject.toml
tts-agent/src/tts_agent/: __init__.py  tools.py
