[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.tts_agent.metadata]
type = "agent"

[project]
name = "tts_agent"
version = "0.1.0"
authors = [
  { name="Greg", email="greg.meldrum@solace.com" },
]
description = "Text-to-speech using Kokoro TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kokoro-tts==2.3.0",  # Kokoro TTS library
]

[tool.hatch.build.targets.wheel]
packages = ["src/tts_agent"]
src-path = "src"

[tool.hatch.build.targets.wheel.force-include]
"src/tts_agent" = "tts_agent/"
"config.yaml" = "tts_agent/config.yaml"
"README.md" = "tts_agent/README.md"
"pyproject.toml" = "tts_agent/pyproject.toml"
